common/test/keyboards/invalid/source/CERR_4073_balochi_phonetic.kmn
store(&VERSION) '10.0'
store(&NAME) 'Balochi Phonetic'
store(&TARGETS) 'any'
store(&KMW_RTL) '1'
store(&LAYOUTFILE) 'balochi_phonetic.keyman-touch-layout'
store(&KEYBOARDVERSION) '1.4.2'
store(&COPYRIGHT) '© 2017-2021 SIL International'
store(&MESSAGE) 'The Balochi Phonetic keyboard is distributed under The MIT License (MIT).'
store(&KMW_HELPTEXT) 'This is a phonetically organized Balochi keyboard.'
store(&VISUALKEYBOARD) 'balochi_phonetic.kvks'
store(&BITMAP) 'CERR__balochi_phonetic.ico'

begin Unicode > use(main)

c ***** CERR_RepeatedBegin 0x00004073 *******************************
begin Unicode > use(main)
c *******************************************************************

group(main) using keys
+ [CTRL B08] > '‎'
+ [CTRL B09] > '‏'
+ [CTRL B10] > '–'
+ [SHIFT CTRL E11] > '“'
+ [SHIFT CTRL E12] > '”'
+ [CTRL E11] > '‘'
+ [CTRL E12] > '’'
+ [CTRL K_K] > 'ء'
+ [CTRL K_D] > 'ذ'
+ [K_EQUAL] > '='
+ [SHIFT K_8] > '*'
+ [SHIFT K_7] > '&'
+ [SHIFT K_5] > '%'
+ [SHIFT K_4] > '$'
+ [SHIFT K_3] > '#'
+ [SHIFT K_2] > '@'
+ [SHIFT K_1] > '!'
+ [SHIFT K_N] > 'ں'
+ [K_BKSLASH] > '۔'
+ [K_LBRKT] > ']'
+ [K_RBRKT] > '['
+ [K_F] > 'َ'
+ [K_V] > 'ِ'
+ [K_X] > 'ش'
+ [SHIFT K_H] > 'ح'
+ [SHIFT K_G] > 'ص'
+ [SHIFT K_Y] > 'ي'
+ [CTRL K_0] > '۰'
+ [CTRL K_9] > '۹'
+ [CTRL K_8] > '۸'
+ [CTRL K_7] > '۷'
+ [CTRL K_6] > '۶'
+ [CTRL K_5] > '۵'
+ [CTRL K_4] > '۴'
+ [CTRL K_3] > '۳'
+ [CTRL K_2] > '۲'
+ [CTRL K_1] > '۱'
+ [K_SLASH] > '/'
+ [K_HYPHEN] > '-'
+ [SHIFT K_COLON] > ':'
+ [SHIFT K_QUOTE] > '"'
+ [K_QUOTE] > U+0027
+ [K_O] > 'ُ'
+ [SHIFT K_O] > 'ْ'
+ [K_BKQUOTE] > 'ء'
+ [SHIFT K_W] > 'أ'
+ [SHIFT K_P] > 'ّ'
+ [SHIFT K_BKQUOTE] > 'ٔ'
+ [SHIFT K_J] > 'ض'
+ [SHIFT K_9] > ')'
+ [SHIFT K_RBRKT] > '{'
+ [SHIFT K_LBRKT] > '}'
+ [SHIFT K_0] > '('
+ [SHIFT K_SLASH] > '؟'
+ [SHIFT K_K] > 'ع'
+ [SHIFT K_EQUAL] > '«'
+ [SHIFT K_HYPHEN] > '»'
+ [SHIFT K_I] > 'ً'

+ [SHIFT K_PERIOD] > '‹'
+ [SHIFT K_COMMA] > '›'
+ [SHIFT K_L] > 'ـ'
+ [SHIFT K_U] > 'ۀ'
+ [SHIFT K_B] > 'ة'
+ [SHIFT K_M] > 'غ'
+ [SHIFT K_F] > 'ف'
+ [SHIFT K_E] > 'ۓ'
+ [SHIFT K_Q] > 'ق'
+ [K_0] > '0'
+ [K_9] > '9'
+ [K_8] > '8'
+ [K_7] > '7'
+ [K_6] > '6'
+ [K_5] > '5'
+ [K_4] > '4'
+ [K_3] > '3'
+ [K_2] > '2'
+ [K_1] > '1'
+ [K_I] > 'ێ'
+ [SHIFT K_D] > 'ڈ'
+ [K_G] > 'گ'
+ [K_U] > 'ۆ'
+ [SHIFT K_R] > 'ڑ'
+ [SHIFT K_6] > '‌'
+ [SHIFT K_T] > 'ٹ'
+ [SHIFT K_V] > 'ظ'
+ [SHIFT K_C] > 'ط'
+ [SHIFT K_X] > 'خ'
+ [SHIFT K_Z] > 'ژ'
+ [SHIFT K_S] > 'ث'
+ [SHIFT K_A] > 'آ'
+ [K_PERIOD] > '.'
+ [K_COMMA] > '،'
+ [K_M] > 'م'
+ [K_N] > 'ن'
+ [K_B] > 'ب'
+ [K_C] > 'چ'
+ [K_Z] > 'ز'
+ [K_P] > 'پ'
+ [K_Y] > 'ی'
+ [K_T] > 'ت'
+ [K_R] > 'ر'
+ [K_E] > 'ے'
+ [K_W] > 'و'
+ [K_Q] > 'ئ'
+ [K_COLON] > '؛'
+ [K_L] > 'ل'
+ [K_K] > 'ک'
+ [K_J] > 'ج'
+ [K_H] > 'ه'
+ [K_D] > 'د'
+ [K_S] > 'س'
+ [K_A] > 'ا'
